update font and logo head

--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,8 @@
     <title>HUSTPC | Computers and IT Equipment</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../assets/icons/themify-icons/themify-icons.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="../assets/imgs/hust-pc.png">
 </head>
 <body>
     <div id="main">
@@ -25,13 +27,13 @@
                                     <option value="">Build PC</option>
                                     <option value="395">CPU</option>                            
                                     <option value="394">RAM</option>
-                                    <option value="394">Lorem ipsum dolorsadqdafadfwefasdf</option>
+                                    <option value="394">Lorem ipsum</option>
                                 </select>
                             </div>
                             <div class="search-form-container">
                                 <input class="text_search" placeholder="Enter your search...">
                                 <button type="submit" class="search-btn" style="display: flex; align-items: center;">
-                                    <i class="ti-search"></i> 
+                                    <!-- <i class="ti-search"></i>  -->
                                     Search
                                 </button>
                             </div>
