product-list for body2 and add the product_price

--- a/html/index.html
+++ b/html/index.html
@@ -81,8 +81,210 @@
 
 
         <!-- BEGIN: Body -->
-        <div class="body" style="width: 100%; height: 220px; background-color: white;">
+        <div id="body2" style="position: relative; width: 100%; height: 2240px; background-color: #f6f6f6;">
+            <div class="row1">
+                <a href="" class="body__product" style="top: 40px; left: 125px;">
+                    <div class="image-product">
+                        <div class="sale__value">
+                            - 30%
+                        </div>
+                        <img src="../assets/imgs/cpu-intel-lake-core-i9-10900k.jpg" alt="">
+                    </div>
+                    <div class="product__tags">CPU</div>
+                    <div class="product__breakline"></div>
+                    <div class="product__name">
+                        <span class="text-limit">Lenovo IdeaPad 110-1515K Laptop - 15.6' Intel Core i3 - 1TB HDD - 4GB RAM...</span>
+                    </div>
+                    <h2 class="product__price">$ 212.30</h2>
+                    <div class="product__rate">
+                        <div class="star__rate">
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                        </div>
+                        <div class="rate__num">(49)</div>
+                    </div>
+                </a>
 
+                <a href="" class="body__product" style="top: 40px; left: 491px;">
+                    <div class="image-product">
+                        <div class="sale__value">
+                            - 30%
+                        </div>
+                        <img src="../assets/imgs/13-144-303-V03.jpg" alt="">
+                    </div>
+                    <div class="product__tags">Cpu</div>
+                    <div class="product__breakline"></div>
+                    <div class="product__name">
+                        <span class="text-limit">MSI MAG Z490 TOMAHAWK LGA 1200 Intel Z490 SATA 6Gb/s ATX Intel Mot...</span>
+                    </div>
+                    <h2 class="product__price">$ 212.30</h2>
+                    <div class="product__rate">
+                        <div class="star__rate">
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                        </div>
+                        <div class="rate__num">(49)</div>
+                    </div>
+                </a>
+
+                <a href="" class="body__product" style="top: 40px; left: 857px;">
+                    <div class="image-product">
+                        <div class="sale__value">
+                            - 30%
+                        </div>
+                        <img src="../assets/imgs/AT5SS210225BHlYA.jpg" alt="">
+                    </div>
+                    <div class="product__tags">Case fan</div>
+                    <div class="product__breakline"></div>
+                    <div class="product__name">
+                        <span class="text-limit">Iceberg Thermal IceGALE Xtra 120mm PWM High Performance Case Fan...</span>
+                    </div>
+                    <h2 class="product__price">$ 34.99</h2>
+                    <div class="product__rate">
+                        <div class="star__rate">
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                        </div>
+                        <div class="rate__num">(49)</div>
+                    </div>
+                </a>
+
+                <a href="" class="body__product" style="top: 40px; left: 1223px;">
+                    <div class="image-product">
+                        <div class="sale__value">
+                            - 30%
+                        </div>
+                        <img src="../assets/imgs/AZUES211009qrp8O.jpg" alt="">
+                    </div>
+                    <div class="product__tags">GPU</div>
+                    <div class="product__breakline"></div>
+                    <div class="product__name">
+                        <span class="text-limit">Yeston Radeon R7 350-4G 6HDMI 4GB 128bit GDDR5 800MHz 512processors...</span>
+                    </div>
+                    <h2 class="product__price">$ 179.00</h2>
+                    <div class="product__rate">
+                        <div class="star__rate">
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                        </div>
+                        <div class="rate__num">(49)</div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="row2" style="position: absolute; top: 626px;">
+                <a href="" class="body__product" style="top: 40px; left: 125px;">
+                    <div class="image-product">
+                        <div class="sale__value">
+                            - 30%
+                        </div>
+                        <img src="../assets/imgs/cpu-intel-lake-core-i9-10900k.jpg" alt="">
+                    </div>
+                    <div class="product__tags">CPU</div>
+                    <div class="product__breakline"></div>
+                    <div class="product__name">
+                        <span class="text-limit">Lenovo IdeaPad 110-1515K Laptop - 15.6' Intel Core i3 - 1TB HDD - 4GB RAM...</span>
+                    </div>
+                    <h2 class="product__price">$ 212.30</h2>
+                    <div class="product__rate">
+                        <div class="star__rate">
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                        </div>
+                        <div class="rate__num">(49)</div>
+                    </div>
+                </a>
+
+                <a href="" class="body__product" style="top: 40px; left: 491px;">
+                    <div class="image-product">
+                        <div class="sale__value">
+                            - 30%
+                        </div>
+                        <img src="../assets/imgs/13-144-303-V03.jpg" alt="">
+                    </div>
+                    <div class="product__tags">Cpu</div>
+                    <div class="product__breakline"></div>
+                    <div class="product__name">
+                        <span class="text-limit">MSI MAG Z490 TOMAHAWK LGA 1200 Intel Z490 SATA 6Gb/s ATX Intel Mot...</span>
+                    </div>
+                    <h2 class="product__price">$ 212.30</h2>
+                    <div class="product__rate">
+                        <div class="star__rate">
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                        </div>
+                        <div class="rate__num">(49)</div>
+                    </div>
+                </a>
+
+                <a href="" class="body__product" style="top: 40px; left: 857px;">
+                    <div class="image-product">
+                        <div class="sale__value">
+                            - 30%
+                        </div>
+                        <img src="../assets/imgs/AT5SS210225BHlYA.jpg" alt="">
+                    </div>
+                    <div class="product__tags">Case fan</div>
+                    <div class="product__breakline"></div>
+                    <div class="product__name">
+                        <span class="text-limit">Iceberg Thermal IceGALE Xtra 120mm PWM High Performance Case Fan...</span>
+                    </div>
+                    <h2 class="product__price">$ 34.99</h2>
+                    <div class="product__rate">
+                        <div class="star__rate">
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                        </div>
+                        <div class="rate__num">(49)</div>
+                    </div>
+                </a>
+
+                <a href="" class="body__product" style="top: 40px; left: 1223px;">
+                    <div class="image-product">
+                        <div class="sale__value">
+                            - 30%
+                        </div>
+                        <img src="../assets/imgs/AZUES211009qrp8O.jpg" alt="">
+                    </div>
+                    <div class="product__tags">GPU</div>
+                    <div class="product__breakline"></div>
+                    <div class="product__name">
+                        <span class="text-limit">Yeston Radeon R7 350-4G 6HDMI 4GB 128bit GDDR5 800MHz 512processors...</span>
+                    </div>
+                    <h2 class="product__price">$ 179.00</h2>
+                    <div class="product__rate">
+                        <div class="star__rate">
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                        </div>
+                        <div class="rate__num">(49)</div>
+                    </div>
+                </a>
+            </div>
         </div>
         <!-- END: Body -->
 
