--- a/html/index.html
+++ b/html/index.html
@@ -285,6 +285,11 @@
                     </div>
                 </a>
             </div>
+
+            <button class="showmore__btn" style="background-color: #2c3e50; border-radius: 7px; width: 178px; height: 43px; font-size: 17px; color: #ffc107; text-transform: uppercase; font-weight: 600; border: none; left: 50%; transform: translateX(-50%); position: absolute; top: 1300px; cursor: pointer;">
+                Show more
+                <i class="fa-solid fa-chevron-down" style="padding-left: 2px;"></i>
+            </button>
         </div>
         <!-- END: Body -->
 
