--- a/html/index.html
+++ b/html/index.html
@@ -81,8 +81,8 @@
 
 
         <!-- BEGIN: Body -->
-        <div id="body2" style="position: relative; width: 100%; height: 2240px; background-color: #f6f6f6;">
-            <div class="row1" style="max-width: 1440px; height: 598px; display: flex; margin: auto; justify-content: space-between; margin-top: 30px;">
+        <div id="body2" style="position: relative; width: 100%; background-color: #f6f6f6;">
+            <div class="row1" style="max-width: 1440px; display: flex; margin: auto; justify-content: space-between; padding-top: 40px;">
                 <a href="" class="body__product">
                     <div class="image-product">
                         <div class="sale__value">
@@ -184,7 +184,7 @@
                 </a>
             </div>
 
-            <div class="row2" style="max-width: 1440px; height: 598px; display: flex; margin: auto; justify-content: space-between; margin-top: 30px;">
+            <div class="row2" style="max-width: 1440px; display: flex; margin: auto; justify-content: space-between; padding-top: 30px;">
                 <a href="" class="body__product">
                     <div class="image-product">
                         <div class="sale__value">
@@ -294,9 +294,92 @@
             </a>
 
             <!-- Blog -->
-            <div class="body2__blog">
+            <div id="blog">
                 <div class="break-to-blog" style="width: 100%; height: 134px; background-color: #fff; box-shadow: 0px 0px 7.03333px rgba(0, 0, 0, 0.25); margin-top: 50px;">
                     <h3 style="font-size: 24px; font-weight: 700; color: #2c2c2c; text-transform: uppercase; width: 1440px; display: flex; margin: auto; padding: 90px 20px 10px 20px;">Recent Blogs</h3>
+                </div>
+
+                <div class="blog__show" style="width: 1440px; display: flex; justify-content: space-between; margin: auto; padding-top: 80px; padding-bottom: 70px;">
+                    <div>
+                        <a href="">
+                            <div class="content">
+                                <div class="image__blog">
+                                    <img src="../assets/imgs/1901_Screenshot_1-1.png" alt="">
+                                </div>
+                                <div class="main__content">
+                                    <div class="blog-content-container">
+                                        <h3>RTX 3090 Ti graphics card revealed the price, only about $ 2490.99</h3>
+                                        <div class="blog__level2">
+                                            <div class="date">
+                                                <i class="fa-solid fa-calendar-days"></i>
+                                                <h2>May 14, 2023</h2>
+                                            </div>
+                                            <div class="break__content"></div>
+                                            <div class="views">
+                                                <i class="fa-solid fa-eye"></i>
+                                                <h2>123 views</h2>
+                                            </div>
+                                        </div>
+                                        <p class="blog__content">Donec laonept solllcitudin mi, vel term pex congue sit amell. Morbi sodal esi urna anten, eu, accumsan enum tempor inner, Prase sent phartra [...]</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div>
+                        <a href="">
+                            <div class="content">
+                                <div class="image__blog">
+                                    <img src="../assets/imgs/174-m--n-h--nh-m--y-t--nh-ch--i-game.jpg" alt="">
+                                </div>
+                                <div class="main__content">
+                                    <div class="blog-content-container">
+                                        <h3>RTX 3090 Ti graphics card revealed the price, only about $ 2490.99</h3>
+                                        <div class="blog__level2">
+                                            <div class="date">
+                                                <i class="fa-solid fa-calendar-days"></i>
+                                                <h2>May 14, 2023</h2>
+                                            </div>
+                                            <div class="break__content"></div>
+                                            <div class="views">
+                                                <i class="fa-solid fa-eye"></i>
+                                                <h2>123 views</h2>
+                                            </div>
+                                        </div>
+                                        <p class="blog__content">Donec laonept solllcitudin mi, vel term pex congue sit amell. Morbi sodal esi urna anten, eu, accumsan enum tempor inner, Prase sent phartra [...]</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div>
+                        <a href="">
+                            <div class="content">
+                                <div class="image__blog">
+                                    <img src="../assets/imgs/187-goc-choi-game-29.jpg" alt="">
+                                </div>
+                                <div class="main__content">
+                                    <div class="blog-content-container">
+                                        <h3>RTX 3090 Ti graphics card revealed the price, only about $ 2490.99</h3>
+                                        <div class="blog__level2">
+                                            <div class="date">
+                                                <i class="fa-solid fa-calendar-days"></i>
+                                                <h2>May 14, 2023</h2>
+                                            </div>
+                                            <div class="break__content"></div>
+                                            <div class="views">
+                                                <i class="fa-solid fa-eye"></i>
+                                                <h2>123 views</h2>
+                                            </div>
+                                        </div>
+                                        <p class="blog__content">Donec laonept solllcitudin mi, vel term pex congue sit amell. Morbi sodal esi urna anten, eu, accumsan enum tempor inner, Prase sent phartra [...]</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
