--- a/html/index.html
+++ b/html/index.html
@@ -81,6 +81,75 @@
 
 
         <!-- BEGIN: Body -->
+        <div id="body1" style="width: 100%; background-color: #fff;">
+            <div class="slide__level1" style="width: 1440px; margin: auto; display: flex; justify-content: space-between; padding-top: 20px;">
+                <div class="slide__left" style="width: 710px; height: 563px; background-color: #9c9c43; position: relative; border-radius: 14px;">
+                    <div class="add-to-cart-btn" style="width: 178px; height: 46px; background-color: #2c3e50; display: flex; font-size: 17px; font-weight: 800; align-items: center; justify-content: center; text-transform: uppercase; color: #ffc107; border-radius: 14px; top: 430px; left: 60px; position: absolute;">
+                        Add to Cart
+                        <i class="fa-solid fa-circle-plus" style="padding: 0 0px 0 10px;"></i>
+                    </div>
+                    <div class="slide-navi" style="width: 196px; height: 38px; background-color: #fff; filter: drop-shadow(0px 0px 7.03333px rgba(0, 0, 0, 0.25)); position: absolute; border-radius: 7px; top: 495px; left: 50px; display: flex; justify-content: center; align-items: center;">
+                        <div class="navi-container" style="width: 150px; display: flex; justify-content: space-between;">
+                            <input type="radio" name="radio-btn" id="radio1">
+                            <input type="radio" name="radio-btn" id="radio2">
+                            <input type="radio" name="radio-btn" id="radio3">
+                            <input type="radio" name="radio-btn" id="radio4">
+                            <input type="radio" name="radio-btn" id="radio5">
+                            <input type="radio" name="radio-btn" id="radio6">
+                            <!-- <div class="circle-navi" style="width: 15px; height: 15px; border: 3px solid #2C3E50; border-radius: 7.5px;"></div> -->
+                        </div>
+                    </div>
+                </div>
+
+                <div class="product__mid">
+                    <div class="prod-mid-1" style="position: relative;">
+                        <div class="add-to-cart-btn" style="width: 120px; height: 36px; background-color: #2c3e50; display: flex; font-size: 12px; font-weight: 400; align-items: center; justify-content: center; text-transform: uppercase; color: #ffc107; border-radius: 7px; bottom: 15px; left: 20px; position: absolute; z-index: 2; filter: drop-shadow(0px 0px 7.03333px rgba(0, 0, 0, 0.5));">
+                            Shop now
+                            <i class="fa-solid fa-cart-plus" style="padding: 0 0px 0 10px;"></i>
+                            <!-- <i class="fa-solid fa-circle-plus" style="padding: 0 0px 0 10px;"></i> -->
+                        </div>
+                        <div class="product-mid-top" style="width: 340px; height: 270px; background-color: aquamarine; border-radius: 14px; display: flex; align-items: center; justify-content: center; overflow: hidden;  filter: drop-shadow(0px 0px 7.03333px rgba(0, 0, 0, 0.5));">
+                            <img src="../assets/imgs/Untitled-1.png" alt="" style="min-width: 100%; min-height: 100%; object-fit: cover;">
+                        </div>
+                    </div>
+
+                    <div class="prod-mid-2" style="position: relative;">
+                        <div class="add-to-cart-btn" style="width: 120px; height: 36px; background-color: #2c3e50; display: flex; font-size: 12px; font-weight: 400; align-items: center; justify-content: center; text-transform: uppercase; color: #ffc107; border-radius: 7px; bottom: 50px; left: 20px; position: absolute; z-index: 2;  filter: drop-shadow(0px 0px 7.03333px rgba(0, 0, 0, 0.5));">
+                            Shop now
+                            <i class="fa-solid fa-cart-plus" style="padding: 0 0px 0 10px;"></i>
+                            <!-- <i class="fa-solid fa-circle-plus" style="padding: 0 0px 0 10px;"></i> -->
+                        </div>
+                        <div class="product-mid-botton" style="width: 340px; height: 270px; background-color: #ffc107; border-radius: 14px; margin-top: 23px;  display: flex; align-items: center; justify-content: center; overflow: hidden;  filter: drop-shadow(0px 0px 7.03333px rgba(0, 0, 0, 0.5));">
+                            <img src="../assets/imgs/Untitled-2.png" alt="" style="min-width: 100%; min-height: 100%; object-fit: cover;">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="product__right" style="width: 334px; height: 563px; background-color:antiquewhite; border-radius: 14px;  display: flex; align-items: center; justify-content: center; overflow: hidden;  filter: drop-shadow(0px 0px 7.03333px rgba(0, 0, 0, 0.5));">
+                    <img src="../assets/imgs/Untitled-3.png" alt="" style="min-width: 100%; min-height: 100%; object-fit: cover;">
+                </div>
+            </div>
+            <div class="banner" style="width: 1440px; height: 264px; background-color: #2c3e90; margin: auto; border-radius: 14px; margin-top: 22px; display: flex; align-items: center; justify-content: center; overflow: hidden; filter: drop-shadow(0px 0px 7.03333px rgba(0, 0, 0, 0.5));">
+                <img src="../assets/imgs/Untitled-4.png" alt="" style="min-width: 100%; min-height: 100%; object-fit: cover;">
+            </div>
+            <h2 style="padding-left: 12px; text-transform: uppercase; margin: auto; width: 1440px;  padding-top: 30px; padding-bottom: 15px;">Best seller brands</h2>
+            <!-- <div class="best-sellers-brands" style="margin: auto; width: 1440px;"><h2 style="padding-left: 12px; text-transform: uppercase; margin: auto; width: 1440px;">Best seller brands</h2></div> -->
+            <div class="best-seller-container" style="width: 1440px; height: 170px; margin: auto; align-items: center; display: flex;">
+                <div style="width: 1360px; display: flex; align-items: center; justify-content: space-between; margin: auto;">
+                    <div class="brand1"><img src="../assets/imgs/amd-ryzen2321.jpg" alt=""></div>
+                    <div class="brand1"><img src="../assets/imgs/Intel-Logo-2005.png" alt=""></div>
+                    <div class="brand1"><img src="../assets/imgs/01-nvidia-logo-vert-500x200-2c50-p@2x.png" alt=""></div>
+                    <div class="brand1"><img src="../assets/imgs/647_kingston_logo.jpg" alt=""></div>
+                    <div class="brand1"><img src="../assets/imgs/download (1).png" alt=""></div>
+                    <div class="brand1"><img src="../assets/imgs/1908_new-corsair-logo-blog-image.png" alt=""></div>
+                    <div class="brand1"><img src="../assets/imgs/crucial-logo.png" alt=""></div>
+                    <div class="brand1"><img src="../assets/imgs/msi-logo.jpg" alt=""></div>
+                </div>
+            </div>
+            <h2 style="padding-left: 12px; text-transform: uppercase; margin: auto; width: 1440px; padding-top: 30px; padding-bottom: 15px;">Feature Products</h2>
+        </div>
+
+
         <div id="body2" style="position: relative; width: 100%; background-color: #f6f6f6;">
             <div class="row1" style="max-width: 1440px; display: flex; margin: auto; justify-content: space-between; padding-top: 40px;">
                 <a href="" class="body__product">
