--- a/html/index.html
+++ b/html/index.html
@@ -83,23 +83,92 @@
         <!-- BEGIN: Body -->
         <div id="body1" style="width: 100%; background-color: #fff;">
             <div class="slide__level1" style="width: 1440px; margin: auto; display: flex; justify-content: space-between; padding-top: 20px;">
-                <div class="slide__left" style="width: 710px; height: 563px; background-color: #9c9c43; position: relative; border-radius: 14px;">
+                <!-- <div class="slide__left">
+                    <div class="sliders" style="display: flex; width: 600%; height: 100%; transition: transform 0.5s ease-in-out;">
+                        <div>
+                            <img src="../assets/imgs/slider/48476_mainboard_gigabyte_x570_aorus_master_0000_1.jpg" alt="Slide 1">
+                        </div>
+                        <div>
+                            <img src="../assets/imgs/slider/34099_2018111317183595_big.png" alt="Slide 2">
+                        </div>
+                        <div>
+                            <img src="../assets/imgs/slider/icue-5000T.jpg" alt="Slide 3">
+                        </div>
+                        <div>
+                            <img src="../assets/imgs/slider/ktc-product-beast-ddr4-rgb-dimm-2-angled-kit-of-2-zm-lg.jpeg" alt="Slide 4">
+                        </div>
+                        <div>
+                            <img src="../assets/imgs/slider/ngunmytnhcoolermastermwev2230v650650wplusbronze.jpg" alt="Slide 5">
+                        </div>
+                        <div>
+                            <img src="../assets/imgs/slider/Png.png" alt="Slide 6">
+                        </div>
+                    </div>
                     <div class="add-to-cart-btn" style="width: 178px; height: 46px; background-color: #2c3e50; display: flex; font-size: 17px; font-weight: 800; align-items: center; justify-content: center; text-transform: uppercase; color: #ffc107; border-radius: 14px; top: 430px; left: 60px; position: absolute;">
                         Add to Cart
                         <i class="fa-solid fa-circle-plus" style="padding: 0 0px 0 10px;"></i>
                     </div>
                     <div class="slide-navi" style="width: 196px; height: 38px; background-color: #fff; filter: drop-shadow(0px 0px 7.03333px rgba(0, 0, 0, 0.25)); position: absolute; border-radius: 7px; top: 495px; left: 50px; display: flex; justify-content: center; align-items: center;">
-                        <div class="navi-container" style="width: 150px; display: flex; justify-content: space-between;">
+                        <div class="navi-container" style="width: 150px; height:15px; display: flex; justify-content: space-between;">
+                            <label class="navi-btn" for="radio1"></label>
                             <input type="radio" name="radio-btn" id="radio1">
+                            <label class="navi-btn" for="radio2"></label>
                             <input type="radio" name="radio-btn" id="radio2">
+                            <label class="navi-btn" for="radio3"></label>
                             <input type="radio" name="radio-btn" id="radio3">
+                            <label class="navi-btn" for="radio4"></label>
                             <input type="radio" name="radio-btn" id="radio4">
+                            <label class="navi-btn" for="radio5"></label>
                             <input type="radio" name="radio-btn" id="radio5">
+                            <label class="navi-btn" for="radio6"></label>
                             <input type="radio" name="radio-btn" id="radio6">
-                            <!-- <div class="circle-navi" style="width: 15px; height: 15px; border: 3px solid #2C3E50; border-radius: 7.5px;"></div> -->
+                        </div>
+                    </div>
+                </div> -->
+
+                <div class="slide__left">
+                    <div class="sliders" style="display: flex; width: 600%; height: 100%; transition: transform 0.5s ease-in-out; --slide-index: 3;">
+                        <div>
+                            <img src="../assets/imgs/slider/48476_mainboard_gigabyte_x570_aorus_master_0000_1.jpg" alt="Slide 1">
+                        </div>
+                        <div>
+                            <img src="../assets/imgs/slider/34099_2018111317183595_big.png" alt="Slide 2">
+                        </div>
+                        <div>
+                            <img src="../assets/imgs/slider/icue-5000T.jpg" alt="Slide 3">
+                        </div>
+                        <div>
+                            <img src="../assets/imgs/slider/ktc-product-beast-ddr4-rgb-dimm-2-angled-kit-of-2-zm-lg.jpeg" alt="Slide 4">
+                        </div>
+                        <div>
+                            <img src="../assets/imgs/slider/ngunmytnhcoolermastermwev2230v650650wplusbronze.jpg" alt="Slide 5">
+                        </div>
+                        <div>
+                            <img src="../assets/imgs/slider/Png.png" alt="Slide 6">
+                        </div>
+                    </div>
+                    <div class="add-to-cart-btn" style="width: 178px; height: 46px; background-color: #2c3e50; display: flex; font-size: 17px; font-weight: 800; align-items: center; justify-content: center; text-transform: uppercase; color: #ffc107; border-radius: 14px; top: 430px; left: 60px; position: absolute;">
+                        Add to Cart
+                        <i class="fa-solid fa-circle-plus" style="padding: 0 0px 0 10px;"></i>
+                    </div>
+                    <div class="slide-navi" style="width: 196px; height: 38px; background-color: #fff; filter: drop-shadow(0px 0px 7.03333px rgba(0, 0, 0, 0.25)); position: absolute; border-radius: 7px; top: 495px; left: 50px; display: flex; justify-content: center; align-items: center;">
+                        <div class="navi-container" style="width: 150px; height: 15px; display: flex; justify-content: space-between;">
+                            <input type="radio" name="radio-btn" id="radio1" checked>
+                            <label for="radio1"></label>
+                            <input type="radio" name="radio-btn" id="radio2">
+                            <label for="radio2"></label>
+                            <input type="radio" name="radio-btn" id="radio3">
+                            <label for="radio3"></label>
+                            <input type="radio" name="radio-btn" id="radio4">
+                            <label for="radio4"></label>
+                            <input type="radio" name="radio-btn" id="radio5">
+                            <label for="radio5"></label>
+                            <input type="radio" name="radio-btn" id="radio6">
+                            <label for="radio6"></label>
                         </div>
                     </div>
                 </div>
+                
 
                 <div class="product__mid">
                     <div class="prod-mid-1" style="position: relative;">
