--- a/html/checkout.html
+++ b/html/checkout.html
@@ -15,7 +15,7 @@
         <!-- BEGIN: Body -->
         <div id="body" style="background-color: #2c3e50;">
             <div class="logo" style="width: 1512px; display: flex; align-items: center; margin: auto; padding-top: 30px;">
-                <img src="../assets/imgs/hust-pc.png" alt="" style="height: 120px;">
+                <img src="../assets/imgs/logo-horizon.png" alt="" style="height: 120px; padding-left: 70px;">
             </div>
 
             <div class="checkout__header">
@@ -179,7 +179,7 @@
                             <div class="input__breakline" style="width: 1px; height: 18px; background-color: rgba(44, 62, 80, 0.6); position: absolute; left: 46px;"></div>
                             <input type="text" placeholder="Enter your Email" style="border: none; position: absolute; left: 68px;">
                         </div>
-                        <button type="submit" class="subcribe__btn" style="color: #2c2c2c; background-color: #ffc107; font-size: 13px; text-transform: uppercase; border-radius: 3.5px; width: 95px;height: 27px; border: none; font-weight: 700;">Subcribe</button>
+                        <button type="submit" class="subcribe__btn" style="color: #2c2c2c; background-color: #ffc107; font-size: 13px; text-transform: uppercase; border-radius: 3.5px; width: 95px;height: 27px; border: none; font-weight: 700; cursor: pointer;">Subcribe</button>
                     </form>
                 </div>
 
