--- a/html/cart.html
+++ b/html/cart.html
@@ -15,7 +15,7 @@
         <!-- BEGIN: Header -->
         <div id="header" style="background-color: #2c3e50;">
             <div class="logo" style="width: 1512px; display: flex; align-items: center; margin: auto; padding-top: 30px;">
-                <img src="../assets/imgs/hust-pc.png" alt="" style="height: 120px;">
+                <img src="../assets/imgs/logo-horizon.png" alt="" style="height: 120px; padding-left: 70px;">
             </div>
 
             <div class="checkout__header">
@@ -29,21 +29,21 @@
                         <div style="width: 108px; height: 108px; background-color: #ffc107; border-radius: 50%; display: flex; align-items: center; justify-content: center;">
                             <i class="fa-solid fa-house" style="font-size: 58px; color: #2c3e50;"></i>
                         </div>
-                        <p style="text-align: center; padding: 20px; font-size: 16px; font-weight: 400; text-transform: uppercase; color: #ffc107;">Step 1/3</p>
+                        <p>Step 1/3</p>
                     </div>
-                    <div class="line" style="width: 273px; height: 3px; background-color: #ffc107; margin-top: 54px;"></div>
+                    <div class="line"></div>
                     <div class="cart" style="width: 108px;">
                         <div style="width: 108px; height: 108px; background-color: #ffc107; border-radius: 50%; display: flex; align-items: center; justify-content: center;">
                             <i class="fa-solid fa-cart-shopping" style="font-size: 58px; color: #2c3e50;"></i>
                         </div>
-                        <p style="text-align: center; padding: 20px; font-size: 16px; font-weight: 400; text-transform: uppercase; color: #ffc107;">Step 1/3</p>
+                        <p>Step 2/3</p>
                     </div>
-                    <div class="line" style="width: 273px; height: 3px; background-color: #ffc107; margin-top: 54px;"></div>
+                    <div class="line"></div>
                     <div class="checkout" style="width: 108px;">
                         <div style="width: 108px; height: 108px; border-radius: 50%; display: flex; align-items: center; justify-content: center; border: 4px solid #ffc107;">
                             <i class="fa-solid fa-money-check-dollar" style="font-size: 58px; color: #ffc107;"></i>
                         </div>
-                        <p style="text-align: center; padding: 20px; font-size: 16px; font-weight: 400; text-transform: uppercase; color: #ffc107;">Step 1/3</p>
+                        <p>Step 3/3</p>
                     </div>
                 </div>
             </div>
@@ -51,20 +51,166 @@
         <!-- END: Header -->
         <!-- BEGIN: Body -->
         <div id="body" style="background-color: white;">
-            <div class="wrapper" style="padding-top: 70px; padding-bottom: 100px; display: flex; width: 1500px; justify-content: space-between; margin: auto;">
+            <div class="wrapper" style="padding-top: 70px; padding-bottom: 100px; display: flex; width: 1456px; justify-content: space-between; margin: auto;">
+                <!-- item-list -->
                 <div class="items-list">
+                    <!-- product-header -->
                     <div class="items__header" style="height: 65px; background-color: #2c3e50; display: flex;">
-                        <div class="checkbox" style="width: 76px; display: flex; align-items: center; justify-content: center;"><input type="checkbox"></div>
-                        <div class="products" style="width: 327px; display: flex; align-items: center; color: white;">Product (5 items)</div>
-                        <div class="classification" style="width: 169px; display: flex; align-items: center; justify-content: center; color: white;">Classification</div>
-                        <div class="price" style="width: 139px; display: flex; align-items: center; justify-content: center; color: white;">Price</div>
-                        <div class="quantity" style="width: 138px; display: flex; align-items: center; justify-content: center; color: white;">Quantity</div>
-                        <div class="money" style="width: 149px; display: flex; align-items: center; justify-content: center; color: white;">Amount of Money</div>
-                        <div class="delete" style="width: 79px; display: flex; align-items: center; justify-content: center; color: white;">Delete</div>
+                        <div class="checkbox"><input type="checkbox"></div>
+                        <div class="products" style="color: white;">Product (5 items)</div>
+                        <div class="classification" style="color: white;">Classification</div>
+                        <div class="price" style="color: white;">Price</div>
+                        <div class="quantity" style="color: white;">Quantity</div>
+                        <div class="money" style="color: white;">Amount of Money</div>
+                        <div class="delete" style="color: white;">Delete</div>
+                    </div>
+                    <!-- products -->
+                    <div class="product-detail">
+                        <div class="checkbox checkbox-item"><input type="checkbox"></div>
+                        <div class="products products-item" style="justify-content: space-between;">
+                            <div class="image-product">
+                                <img src="../assets/imgs/cart-products/1.png" alt="">
+                            </div>
+                            <div class="prod-content" style="width: 212px;">
+                                <p>Headphone WH-1000XM4</p>
+                            </div>
+                        </div>
+                        <div class="classification cls-item">64GB</div>
+                        <div class="price price-item">$ 350.25</div>
+                        <div class="quantity qty-item">
+                            <button style="border-radius: 7px 0 0 7px;"><i class="fa-solid fa-minus"></i></button>
+                            <input type="text" value="2">
+                            <button style="border-radius: 0 7px 7px 0;"><i class="fa-solid fa-plus"></i></button>
+                        </div>
+                        <div class="money money-item">$ 700.50</div>
+                        <div class="delete delete-item">
+                            <a href="">
+                                <i class="fa-solid fa-trash"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="product-detail">
+                        <div class="checkbox checkbox-item"><input type="checkbox"></div>
+                        <div class="products products-item" style="justify-content: space-between;">
+                            <div class="image-product">
+                                <img src="../assets/imgs/cart-products/2.jpg" alt="">
+                            </div>
+                            <div class="prod-content" style="width: 212px;">
+                                <p>SSD Samsung 1TB</p>
+                            </div>
+                        </div>
+                        <div class="classification cls-item">1TB</div>
+                        <div class="price price-item">$ 150.15</div>
+                        <div class="quantity qty-item">
+                            <button style="border-radius: 7px 0 0 7px;"><i class="fa-solid fa-minus"></i></button>
+                            <input type="text" value="1">
+                            <button style="border-radius: 0 7px 7px 0;"><i class="fa-solid fa-plus"></i></button>
+                        </div>
+                        <div class="money money-item">$ 150.15</div>
+                        <div class="delete delete-item">
+                            <a href="">
+                                <i class="fa-solid fa-trash"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="product-detail">
+                        <div class="checkbox checkbox-item"><input type="checkbox"></div>
+                        <div class="products products-item" style="justify-content: space-between;">
+                            <div class="image-product">
+                                <img src="../assets/imgs/cart-products/3.png" alt="">
+                            </div>
+                            <div class="prod-content" style="width: 212px;">
+                                <p>CPU Cooler Master Hyper 212 RGB</p>
+                            </div>
+                        </div>
+                        <div class="classification cls-item">Standard</div>
+                        <div class="price price-item">$ 80.14</div>
+                        <div class="quantity qty-item">
+                            <button style="border-radius: 7px 0 0 7px;"><i class="fa-solid fa-minus"></i></button>
+                            <input type="text" value="3">
+                            <button style="border-radius: 0 7px 7px 0;"><i class="fa-solid fa-plus"></i></button>
+                        </div>
+                        <div class="money money-item">$ 240.42</div>
+                        <div class="delete delete-item">
+                            <a href="">
+                                <i class="fa-solid fa-trash"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="product-detail">
+                        <div class="checkbox checkbox-item"><input type="checkbox"></div>
+                        <div class="products products-item" style="justify-content: space-between;">
+                            <div class="image-product">
+                                <img src="../assets/imgs/cart-products/4.jpg" alt="">
+                            </div>
+                            <div class="prod-content" style="width: 212px;">
+                                <p>NVIDIA GeForce RTX 3080</p>
+                            </div>
+                        </div>
+                        <div class="classification cls-item">10GB</div>
+                        <div class="price price-item">$ 900.00</div>
+                        <div class="quantity qty-item">
+                            <button style="border-radius: 7px 0 0 7px;"><i class="fa-solid fa-minus"></i></button>
+                            <input type="text" value="1">
+                            <button style="border-radius: 0 7px 7px 0;"><i class="fa-solid fa-plus"></i></button>
+                        </div>
+                        <div class="money money-item">$ 900.00</div>
+                        <div class="delete delete-item">
+                            <a href="">
+                                <i class="fa-solid fa-trash"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="product-detail">
+                        <div class="checkbox checkbox-item"><input type="checkbox"></div>
+                        <div class="products products-item" style="justify-content: space-between;">
+                            <div class="image-product">
+                                <img src="../assets/imgs/cart-products/5.jpg" alt="">
+                            </div>
+                            <div class="prod-content" style="width: 212px;">
+                                <p>Corsair K95 RGB Platinum Keyboard</p>
+                            </div>
+                        </div>
+                        <div class="classification cls-item">Standard</div>
+                        <div class="price price-item">$ 203.48</div>
+                        <div class="quantity qty-item">
+                            <button style="border-radius: 7px 0 0 7px;"><i class="fa-solid fa-minus"></i></button>
+                            <input type="text" value="2">
+                            <button style="border-radius: 0 7px 7px 0;"><i class="fa-solid fa-plus"></i></button>
+                        </div>
+                        <div class="money money-item">$ 406.96</div>
+                        <div class="delete delete-item">
+                            <a href="">
+                                <i class="fa-solid fa-trash"></i>
+                            </a>
+                        </div>
                     </div>
                 </div>
+                <!-- go-to-checkout -->
                 <div class="go-to-checkout">
-                    <div class="checkout__header" style="width: 389px; height: 65px; background-color: #2c3e50; display: flex; align-items: center; justify-content: center; color: white;">Subtotal</div>
+                    <div class="checkout__header" style="width: 360px; height: 65px; background-color: #2c3e50; display: flex; align-items: center; justify-content: center; color: white;">Subtotal</div>
+                    <div class="checkout-body" style="width: 360px; background-color: #e4ebec; display: flex; justify-content: center;">
+                        <div class="cart-total-wrapper" style="width: 332px; margin-top: 21px; margin-bottom: 23px;">
+                            <div class="subtotal">
+                                <div>
+                                    <p>Subtotal</p>
+                                    <h3 style="font-size: 17px; font-weight: 600; color: #2c2c2c;">$ 2,398.03</h3>
+                                </div>
+                            </div>
+
+                            <div class="total-money">
+                                <div>
+                                    <p style="display: flex; align-items: center; padding-bottom: 8px;">Total money</p>
+                                    <div>
+                                        <h3 style="text-align: right; font-size: 24px; font-weight: 800; color: #2c2c2c; padding-top: 8px;">$ 2,398.03</h3>
+                                        <p style="font-size: 12px; font-weight: 300; color: #2c2c2c;">(All taxes are included)</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <button>Proceed to checkout</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -81,7 +227,7 @@
                             <div class="input__breakline" style="width: 1px; height: 18px; background-color: rgba(44, 62, 80, 0.6); position: absolute; left: 46px;"></div>
                             <input type="text" placeholder="Enter your Email" style="border: none; position: absolute; left: 68px;">
                         </div>
-                        <button type="submit" class="subcribe__btn" style="color: #2c2c2c; background-color: #ffc107; font-size: 13px; text-transform: uppercase; border-radius: 3.5px; width: 95px;height: 27px; border: none; font-weight: 700;">Subcribe</button>
+                        <button type="submit" class="subcribe__btn" style="color: #2c2c2c; background-color: #ffc107; font-size: 13px; text-transform: uppercase; border-radius: 3.5px; width: 95px;height: 27px; border: none; font-weight: 700; cursor: pointer;">Subcribe</button>
                     </form>
                 </div>
 
