Sign in and Sign up page

--- a/html/contact_us.html
+++ b/html/contact_us.html
@@ -144,7 +144,7 @@
 
                 <div class="column2" style="padding-top: 35px;">
                     <h1>Information</h1>
-                    <div class="infor__breakline""></div>
+                    <div class="infor__breakline"></div>
                     <ul>
                         <li><div class="list__type"></div><a href="">About Us</a></li>
                         <li><div class="list__type"></div><a href="">More Search</a></li>
@@ -155,7 +155,7 @@
 
                 <div class="column3" style="padding-top: 35px;">
                     <h1>Helpful Links</h1>
-                    <div class="infor__breakline""></div>
+                    <div class="infor__breakline"></div>
                     <ul>
                         <li><div class="list__type"></div><a href="">Services</a></li>
                         <li><div class="list__type"></div><a href="">Supports</a></li>
@@ -167,7 +167,7 @@
     
                 <div class="column4" style="padding-top: 35px;">
                     <h1>Our Services</h1>
-                    <div class="infor__breakline""></div>
+                    <div class="infor__breakline"></div>
                     <ul>
                         <li><div class="list__type"></div><a href="">Brands List</a></li>
                         <li><div class="list__type"></div><a href="">Orders</a></li>
@@ -179,7 +179,7 @@
     
                 <div class="column5" style="padding-top: 35px; padding-right: 10px;">
                     <h1>Contact Us</h1>
-                    <div class="infor__breakline""></div>
+                    <div class="infor__breakline"></div>
                     <div class="contact__phone">
                         <i class="fa-sharp fa-solid fa-phone-volume"></i>
                         (+84) 123 456 78 99
