--- a/html/buildpc.html
+++ b/html/buildpc.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HUSTPC | Computers and IT Equipment</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/hustpc-website/css/style_buildpc.css">
     <script src="https://kit.fontawesome.com/5d7bdd2819.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/png" href="../assets/img/hust-pc.png">
+    <link rel="icon" type="image/png" href="../assets/imgs/hust-pc.png">
 </head>
 
 <body>
     <div id="header" style="width: 100%; height: 211px; position: relative; background-color: #2c3e50;">
         <div class="head-header" style="display: flex; width: 1440px; justify-content: space-between; margin: auto; padding-top: 20px;">
-            <a href="" class="logo-img"><img src="../assets/img/hust-pc-logo.png" alt="" style="width: 142px; height: auto;"></a>
+            <a href="" class="logo-img"><img src="../assets/imgs/hust-pc-logo.png" alt="" style="width: 142px; height: auto;"></a>
 
             <div class="header-function">
                 <!-- header-search -->
@@ -94,7 +94,7 @@
         </div>
         <!-- cpu -->
         <div class="component item">
-            <img src="/assets/img/processor.png">
+            <img src="/hustpc-website//assets/imgs/processor.png">
             <p>CPU</p>
         </div>
         <div class="select item">
@@ -104,11 +104,11 @@
             </button>
         </div>
         <div class="remove item">
-            <img src="/assets/img/remove.png">
+            <img src="/hustpc-website//assets/imgs/remove.png">
         </div>
         <!-- motherboard -->
         <div class="component item">
-            <img src="/assets/img/motherboard.png">
+            <img src="/hustpc-website//assets/imgs/motherboard.png">
             <P>Motherboard</P>
         </div>
         <div class="select item">
@@ -118,11 +118,11 @@
             </button>
         </div>
         <div class="remove item">
-            <img src="/assets/img/remove.png">
+            <img src="/hustpc-website//assets/imgs/remove.png">
         </div>
         <!-- video_card -->
         <div class="component item">
-            <img src="/assets/img/graphics-card.png">
+            <img src="/hustpc-website//assets/imgs/graphics-card.png">
             <p>Video cards</p>
         </div>
         <div class="select item">
@@ -132,11 +132,11 @@
             </button>
         </div>
         <div class="remove item">
-            <img src="/assets/img/remove.png">
+            <img src="/hustpc-website//assets/imgs/remove.png">
         </div>
         <!-- case -->
         <div class="component item">
-            <img src="/assets/img/cpu.png">
+            <img src="/hustpc-website//assets/imgs/cpu.png">
             <p>Case</p>
         </div>
         <div class="select item">
@@ -146,11 +146,11 @@
             </button>
         </div>
         <div class="remove item">
-            <img src="/assets/img/remove.png">
+            <img src="/hustpc-website//assets/imgs/remove.png">
         </div>
         <!-- power_supply -->
         <div class="component item">
-            <img src="/assets/img/power-supply.png">
+            <img src="/hustpc-website//assets/imgs/power-supply.png">
             <p>Power supllies</p>
         </div>
         <div class="select item">
@@ -160,11 +160,11 @@
             </button>
         </div>
         <div class="remove item">
-            <img src="/assets/img/remove.png">
+            <img src="/hustpc-website//assets/imgs/remove.png">
         </div>
         <!-- storage -->
         <div class="component item">
-            <img src="/assets/img/harddisk.png">
+            <img src="/hustpc-website//assets/imgs/harddisk.png">
             <p>Storage</p>
         </div>
         <div class="select item">
@@ -174,11 +174,11 @@
             </button>
         </div>
         <div class="remove item">
-            <img src="/assets/img/remove.png">
+            <img src="/hustpc-website//assets/imgs/remove.png">
         </div>
         <!-- cpu_cooler -->
         <div class="component item">
-            <img src="/assets/img/cooler.png">
+            <img src="/hustpc-website//assets/imgs/cooler.png">
             <p>CPU cooler</p>
         </div>
         <div class="select item">
@@ -188,11 +188,11 @@
             </button>
         </div>
         <div class="remove item">
-            <img src="/assets/img/remove.png">
+            <img src="/hustpc-website//assets/imgs/remove.png">
         </div>
         <!-- os -->
         <div class="component item">
-            <img src="/assets/img/ram.png">
+            <img src="/hustpc-website//assets/imgs/ram.png">
             <p>Operating system</p>
         </div>
         <div class="select item">
@@ -202,11 +202,11 @@
             </button>
         </div>
         <div class="remove item">
-            <img src="/assets/img/remove.png">
+            <img src="/hustpc-website//assets/imgs/remove.png">
         </div>
         <!-- memory -->
         <div class="component item">
-            <img src="/assets/img/ram.png">
+            <img src="/hustpc-website//assets/imgs/ram.png">
             <p>Memory</p>
         </div>
         <div class="select item">
@@ -216,11 +216,11 @@
             </button>
         </div>
         <div class="remove item">
-            <img src="/assets/img/remove.png">
+            <img src="/hustpc-website//assets/imgs/remove.png">
         </div>
         <!-- accessoris -->
         <div class="component item">
-            <img src="/assets/img/computer.png">
+            <img src="/hustpc-website//assets/imgs/computer.png">
             <p>Accessoris</p>
         </div>
         <div class="select item">
@@ -230,7 +230,7 @@
             </button>
         </div>
         <div class="remove item">
-            <img src="/assets/img/remove.png">
+            <img src="/hustpc-website//assets/imgs/remove.png">
         </div>
     </div>
     <!-- footer -->
