commit for backend

--- a/html/index.html
+++ b/html/index.html
@@ -226,7 +226,7 @@
                     </div>
                 </a>
 
-                <a href="" class="body__product"">
+                <a href="" class="body__product">
                     <div class="image-product">
                         <div class="sale__value">
                             - 30%
