--- a/html/notification.html
+++ b/html/notification.html
@@ -79,7 +79,6 @@
         </div>
         <!-- END: Header -->
 
-
         <!-- BEGIN: Body -->
         <div id="body" style="display: flex;">
             <div class="body_wrapper" style="width: 1480px; margin: auto">
@@ -224,21 +223,24 @@
                             </div>
                         </div>
 
-                        <div class="more_info" style="display: flex;">
+                        <div class="more_info" style="display: flex; margin-top: 40px; margin-left: 30px;">
                             <a href="index.php">
                                 <div>
+                                    <i class="fa-solid fa-house"></i>
                                     Return to Home
                                 </div>
                             </a>
 
                             <a href="#">
                                 <div>
+                                    <i class="fa-solid fa-print"></i>
                                     Export Order
                                 </div>
                             </a>
 
                             <a href="product_list.php">
                                 <div>
+                                    <i class="fa-solid fa-bag-shopping"></i>
                                     Continue Shopping
                                 </div>
                             </a>
