front end build-pc

--- a/html/buildpc.html
+++ b/html/buildpc.html
@@ -120,7 +120,11 @@
 
                     <div class="config_name">64GB Standard Lorem ipsum dolor</div>
 
-                    <div class="quantity">2</div>
+                    <div class="quantity">
+                        <button style="border-radius: 7px 0 0 7px;"><i class="fa-solid fa-minus"></i></button>
+                        <input type="text" value="1">
+                        <button style="border-radius: 0 7px 7px 0;"><i class="fa-solid fa-plus"></i></button>
+                    </div>
 
                     <div class="sub_total">$ 346.65</div>
 
@@ -139,14 +143,16 @@
                     </div>
 
                     <div class="select_item">
-                        <div class="select_btn">
-                            <a href="#">Select</a>
-                        </div>
+                        <button>Select</button>
                     </div>
 
                     <div class="config_name"></div>
 
-                    <div class="quantity"></div>
+                    <div class="quantity">
+                        <!-- <button style="border-radius: 7px 0 0 7px;"><i class="fa-solid fa-minus"></i></button>
+                        <input type="text" value="1">
+                        <button style="border-radius: 0 7px 7px 0;"><i class="fa-solid fa-plus"></i></button> -->
+                    </div>
 
                     <div class="sub_total"></div>
 
@@ -170,7 +176,11 @@
 
                     <div class="config_name">64GB Standard Lorem ipsum dolor</div>
 
-                    <div class="quantity">2</div>
+                    <div class="quantity">
+                        <button style="border-radius: 7px 0 0 7px;"><i class="fa-solid fa-minus"></i></button>
+                        <input type="text" value="1">
+                        <button style="border-radius: 0 7px 7px 0;"><i class="fa-solid fa-plus"></i></button>
+                    </div>
 
                     <div class="sub_total">$ 346.65</div>
 
@@ -194,7 +204,11 @@
 
                     <div class="config_name">64GB Standard Lorem ipsum dolor</div>
 
-                    <div class="quantity">2</div>
+                    <div class="quantity">
+                        <button style="border-radius: 7px 0 0 7px;"><i class="fa-solid fa-minus"></i></button>
+                        <input type="text" value="1">
+                        <button style="border-radius: 0 7px 7px 0;"><i class="fa-solid fa-plus"></i></button>
+                    </div>
 
                     <div class="sub_total">$ 346.65</div>
 
@@ -218,7 +232,11 @@
 
                     <div class="config_name">64GB Standard Lorem ipsum dolor</div>
 
-                    <div class="quantity">2</div>
+                    <div class="quantity">
+                        <button style="border-radius: 7px 0 0 7px;"><i class="fa-solid fa-minus"></i></button>
+                        <input type="text" value="1">
+                        <button style="border-radius: 0 7px 7px 0;"><i class="fa-solid fa-plus"></i></button>
+                    </div>
 
                     <div class="sub_total">$ 346.65</div>
 
@@ -242,7 +260,11 @@
 
                     <div class="config_name">64GB Standard Lorem ipsum dolor</div>
 
-                    <div class="quantity">2</div>
+                    <div class="quantity">
+                        <button style="border-radius: 7px 0 0 7px;"><i class="fa-solid fa-minus"></i></button>
+                        <input type="text" value="1">
+                        <button style="border-radius: 0 7px 7px 0;"><i class="fa-solid fa-plus"></i></button>
+                    </div>
 
                     <div class="sub_total">$ 346.65</div>
 
@@ -266,7 +288,11 @@
 
                     <div class="config_name">64GB Standard Lorem ipsum dolor</div>
 
-                    <div class="quantity">2</div>
+                    <div class="quantity">
+                        <button style="border-radius: 7px 0 0 7px;"><i class="fa-solid fa-minus"></i></button>
+                        <input type="text" value="1">
+                        <button style="border-radius: 0 7px 7px 0;"><i class="fa-solid fa-plus"></i></button>
+                    </div>
 
                     <div class="sub_total">$ 346.65</div>
 
@@ -290,7 +316,11 @@
 
                     <div class="config_name">64GB Standard Lorem ipsum dolor</div>
 
-                    <div class="quantity">2</div>
+                    <div class="quantity">
+                        <button style="border-radius: 7px 0 0 7px;"><i class="fa-solid fa-minus"></i></button>
+                        <input type="text" value="1">
+                        <button style="border-radius: 0 7px 7px 0;"><i class="fa-solid fa-plus"></i></button>
+                    </div>
 
                     <div class="sub_total">$ 346.65</div>
 
@@ -314,7 +344,11 @@
 
                     <div class="config_name">64GB Standard Lorem ipsum dolor</div>
 
-                    <div class="quantity">2</div>
+                    <div class="quantity">
+                        <button style="border-radius: 7px 0 0 7px;"><i class="fa-solid fa-minus"></i></button>
+                        <input type="text" value="1">
+                        <button style="border-radius: 0 7px 7px 0;"><i class="fa-solid fa-plus"></i></button>
+                    </div>
 
                     <div class="sub_total">$ 346.65</div>
 
@@ -338,7 +372,11 @@
 
                     <div class="config_name">64GB Standard Lorem ipsum dolor</div>
 
-                    <div class="quantity">2</div>
+                    <div class="quantity">
+                        <button style="border-radius: 7px 0 0 7px;"><i class="fa-solid fa-minus"></i></button>
+                        <input type="text" value="1">
+                        <button style="border-radius: 0 7px 7px 0;"><i class="fa-solid fa-plus"></i></button>
+                    </div>
 
                     <div class="sub_total">$ 346.65</div>
 
@@ -346,6 +384,8 @@
                         <a href="#" style="text-decoration: none; color: #2c2c2c; padding: 20px;"><i class="fa-solid fa-trash"></i></a>
                     </div>
                 </div>
+
+                <button type="submit">Add all to Cart</button>
             </form>
         </div>
     </div>
