initial build pc

--- a/html/product_list.html
+++ b/html/product_list.html
@@ -75,7 +75,7 @@
                 <li><a href="">Best Seller</a></li>
                 <li><a href="">Blogs</a></li>
                 <li><a href="">About us</a></li>
-                <li style="background-color: #ffc107; border-radius: 14px 14px 0 0;"><a href="" style="font-size: 16px; font-weight: 700; color: black;">Contact us</a></li>
+                <li style="background-color: #ffc107; border-radius: 14px 14px 0 0;"><a href="" style="font-size: 16px; font-weight: 700; color: #2c2c2c;">Contact us</a></li>
             </ul>
         </div>
         <!-- END: Header -->
