--- a/html/buildpc.html
+++ b/html/buildpc.html
@@ -385,8 +385,162 @@
                     </div>
                 </div>
 
-                <button type="submit">Add all to Cart</button>
+                <div class="setup_to_cart" style="display: flex; background-color: #2c3e50; justify-content: space-between; margin-bottom: 60px; margin-top: 40px; padding: 8px 40px; padding-top: 24px;">
+                    <div class="note_buildpc" style="width: 624px; height: 180px; display: flex; align-items: center; color: #fff; font-size: 17px; font-weight: 300; line-height: 28px;">
+                        NOTE: Before purchasing, we recommend that you check all specifications such as physical dimensions and item details to ensure 100% compatibility. If they are not compatible with each other, we will contact you as soon as possible to change some components accordingly.
+                    </div>
+                    <div class="add_to_cart" style="width: 742px; height: 200px; padding-top: 24px;">
+                        <div class="total_money" style="font-size: 30px; font-weight: 600; color: #fff; padding-left: 316px;">
+                            <span style="margin-right: 24px; font-weight: 400;">Total Money: </span>
+                            <span>$ 3421.49</span>
+                        </div>
+                        <div class="button_action" style="display: flex; justify-content: space-around; margin-top: 32px; padding-left: 92px;">
+                            <button type="submit" style="width: 280px; height: 64px; background-color: #fff; color: #2c3e50; font-size: 24px; font-weight: 600; text-transform: uppercase; border-radius: 8px; border: none;">Reset All</button>
+                            <button type="submit" style="width: 280px; height: 64px; background-color: #ffc107; color: #2c3e50; font-size: 24px; font-weight: 600; text-transform: uppercase; border-radius: 8px; border: none;">Add to Cart</button>
+                        </div>
+                    </div>
+                </div>
             </form>
+        </div>
+
+        <div class="popup-overlay" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.5); z-index: 9999; display: none; justify-content: center; align-items: center;">
+            <div class="popup-content" style="width: 1288px; height: 762px; background-color: #fff; box-shadow: 0px 0px 16px 4px rgba(255, 255, 255, 0.2);">
+                <div class="popup__header" style="height: 120px; background-color: #2c3e50; display: flex; align-items: center; justify-content: space-between; padding: 0 24px;">
+                    <div class="popup__logo" style="display: flex; align-items: center; margin-left: 40px;">
+                        <i class="fa-solid fa-computer" style="font-size: 80px; color: #fff;"></i>
+                        <div class="logo_text" style="color: #fff; text-transform: uppercase; margin-left: 16px;">
+                            <p style="font-size: 26px; font-weight: 700;">Build PC</p>
+                            <p style="font-size: 16px; font-weight: 500;">Select Component</p>
+                        </div>
+                    </div>
+
+                    <div class="popup__search" style="display: flex; background-color: #fff; width: 462px; height: 52px; border-radius: 24px; padding: 2px 0; margin-right: 100px;">
+                        <input type="text" placeholder="Enter your search ..." style="border: none; font-size: 20px; margin-left: 44px; width: 349px;">
+                        <button type="submit" style="border: none; color: #2c3e50; font-size: 30px; cursor: pointer; background-color: #fff; padding: 0 9px;">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                        </button>
+                    </div>
+
+                    <div class="popup__close">
+                        <button style="font-size: 36px; color: #fff; background-color: #2c3e50; border: none; cursor: pointer; padding: 8px 12px; margin-bottom: 44px;"><i class="fa-solid fa-xmark"></i></button>
+                    </div>
+                </div>
+
+                <div class="sort_by" style="display: flex; margin: 20px 0 20px 54px;">
+                    <div class="sortby__label">Sort by:</div>
+                    <div class="sortby__dropdown">
+                        <select id="sortby-select">
+                            <option value="nameaz">All Products</option>
+                            <option value="nameaz">Name A → Z</option>
+                            <option value="nameza">Name Z → A</option>
+                            <option value="priceasc">Price ASC</option>
+                            <option value="pricedesc">Price DESC</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="main__content" style="overflow-y: auto; max-height: 540px;">
+                    <div class="wrapper" style="width: 1184px; margin: auto;">
+                        <div class="product">
+                            <div class="prod__img">
+                                <img src="../assets/imgs/product-imgs/CASE-011/1.jpg" alt="">
+                            </div>
+                            <a href="">
+                                <div class="prod__name">
+                                    Lorem ipsum demo dolor Lorem ipsum demo dolor Lorem ipsum demo dolor Lorem ipsum demo dolor Lorem ipsum Lore ipsum demo dolor Lorem ipsum demo dolor Lorem ipsum demo dolor Lorem ipsum
+                                </div>
+                            </a>
+                            <div class="prod__config">Demo type Lorem ipsum type Lorem ipsum</div>
+                            <div class="prod__price">$ 153.61</div>
+                            <button type="submit">Add to my PC</button>
+                        </div>
+
+                        <div class="product">
+                            <div class="prod__img">
+                                <img src="../assets/imgs/product-imgs/CASE-011/1.jpg" alt="">
+                            </div>
+                            <a href="">
+                                <div class="prod__name">
+                                    Lorem ipsum demo dolor Lorem ipsum demo dolor Lorem ipsum demo dolor Lorem ipsum demo dolor Lorem ipsum Lore ipsum demo dolor Lorem ipsum demo dolor Lorem ipsum demo dolor Lorem ipsum
+                                </div>
+                            </a>
+                            <div class="prod__config">Demo type Lorem ipsum type Lorem ipsum</div>
+                            <div class="prod__price">$ 153.61</div>
+                            <button type="submit">Add to my PC</button>
+                        </div>
+
+                        <div class="product">
+                            <div class="prod__img">
+                                <img src="../assets/imgs/product-imgs/CASE-011/1.jpg" alt="">
+                            </div>
+                            <a href="">
+                                <div class="prod__name">
+                                    Lorem ipsum demo dolor Lorem ipsum demo dolor Lorem ipsum demo dolor Lorem ipsum demo dolor Lorem ipsum Lore ipsum demo dolor Lorem ipsum demo dolor Lorem ipsum demo dolor Lorem ipsum
+                                </div>
+                            </a>
+                            <div class="prod__config">Demo type Lorem ipsum type Lorem ipsum</div>
+                            <div class="prod__price">$ 153.61</div>
+                            <button type="submit">Add to my PC</button>
+                        </div>
+
+                        <div class="product">
+                            <div class="prod__img">
+                                <img src="../assets/imgs/product-imgs/CASE-011/1.jpg" alt="">
+                            </div>
+                            <a href="">
+                                <div class="prod__name">
+                                    Lorem ipsum demo dolor Lorem ipsum demo dolor Lorem ipsum demo dolor Lorem ipsum demo dolor Lorem ipsum Lore ipsum demo dolor Lorem ipsum demo dolor Lorem ipsum demo dolor Lorem ipsum
+                                </div>
+                            </a>
+                            <div class="prod__config">Demo type Lorem ipsum type Lorem ipsum</div>
+                            <div class="prod__price">$ 153.61</div>
+                            <button type="submit">Add to my PC</button>
+                        </div>
+
+                        <div class="product">
+                            <div class="prod__img">
+                                <img src="../assets/imgs/product-imgs/CASE-011/1.jpg" alt="">
+                            </div>
+                            <a href="">
+                                <div class="prod__name">
+                                    Lorem ipsum demo dolor Lorem ipsum demo dolor Lorem ipsum demo dolor Lorem ipsum demo dolor Lorem ipsum Lore ipsum demo dolor Lorem ipsum demo dolor Lorem ipsum demo dolor Lorem ipsum
+                                </div>
+                            </a>
+                            <div class="prod__config">Demo type Lorem ipsum type Lorem ipsum</div>
+                            <div class="prod__price">$ 153.61</div>
+                            <button type="submit">Add to my PC</button>
+                        </div>
+
+                        <div class="product">
+                            <div class="prod__img">
+                                <img src="../assets/imgs/product-imgs/CASE-011/1.jpg" alt="">
+                            </div>
+                            <a href="">
+                                <div class="prod__name">
+                                    Lorem ipsum demo dolor Lorem ipsum demo dolor Lorem ipsum demo dolor Lorem ipsum demo dolor Lorem ipsum Lore ipsum demo dolor Lorem ipsum demo dolor Lorem ipsum demo dolor Lorem ipsum
+                                </div>
+                            </a>
+                            <div class="prod__config">Demo type Lorem ipsum type Lorem ipsum</div>
+                            <div class="prod__price">$ 153.61</div>
+                            <button type="submit">Add to my PC</button>
+                        </div>
+
+                        <div class="product">
+                            <div class="prod__img">
+                                <img src="../assets/imgs/product-imgs/CASE-011/1.jpg" alt="">
+                            </div>
+                            <a href="">
+                                <div class="prod__name">
+                                    Lorem ipsum demo dolor Lorem ipsum demo dolor Lorem ipsum demo dolor Lorem ipsum demo dolor Lorem ipsum Lore ipsum demo dolor Lorem ipsum demo dolor Lorem ipsum demo dolor Lorem ipsum
+                                </div>
+                            </a>
+                            <div class="prod__config">Demo type Lorem ipsum type Lorem ipsum</div>
+                            <div class="prod__price">$ 153.61</div>
+                            <button type="submit">Add to my PC</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     
@@ -479,6 +633,7 @@
             </div>
         </div>
     </div>
-</body>
 
+    <script src="../js/buildpc.js"></script>
+</body>
 </html>
